--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -244,7 +244,7 @@ h3 a,
 h4 a,
 h5 a,
 h6 a {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     text-decoration: none!important;
     opacity: 1
 }
@@ -424,7 +424,7 @@ ul.btn li:last-child {
 
 .white_bg {
     background: rgb(236, 236, 236);
-    border-radius: 50px;
+    border-radius: 25px;
     height: 80vh;
     opacity: 0.9;
     padding: 40px 35px;
@@ -432,6 +432,11 @@ ul.btn li:last-child {
 
 
 /** banner section **/
+
+.head-1 {
+    height: 50px;
+    width: 50px;
+}
 
 .banner_main {
     padding: 60px 0 20px 0;
@@ -555,7 +560,7 @@ ul.btn li:last-child {
 
 .services_main {
     text-align: center;
-    margin-top: 20%;
+    margin-top: 10%;
 }
 
 .services_main .ho {
@@ -611,6 +616,107 @@ ul.btn li:last-child {
 }
 
 
+/* footer section start ----------------------- */
+
+.grow2 {
+    transition: all .1s ease-in-out;
+}
+
+.grow2:hover {
+    transform: scale(1.03);
+}
+
+footer {
+    background-color: #161616;
+    color: white;
+    padding: 0;
+}
+
+.footer_image img {
+    z-index: 10;
+    height: 100px;
+    width: 600px;
+}
+
+hr.light {
+    border-top: 1px solid #d5d5d5;
+    width: 100%;
+    margin-top: .8rem;
+}
+
+.webarch {
+    text-align: center;
+    color: white;
+    font-size: 13px;
+}
+
+.webarch:hover {
+    color: #957dce;
+}
+
+footer a {
+    color: #d5d5d5;
+}
+
+hr.light-100 {
+    border-top: 1px solid #d5d5d5;
+    width: 100%;
+    margin-top: .8rem;
+    margin-bottom: 1rem;
+}
+
+li {
+    list-style-type: none;
+}
+
+.social_icon li a {
+    font-size: 30px;
+    margin-right: 1vw;
+}
+
+li a:hover {
+    color: #957dce;
+    text-decoration: none;
+}
+
+.webarch-website a:hover {
+    color: #957dce;
+    text-decoration: none;
+}
+
+.footer_inner1 {
+    margin-left: 35%;
+}
+
+.socialresponsive {
+    align-items: center;
+}
+
+ul.social_icon {
+    align-items: center;
+    margin-left: auto;
+}
+
+ul.social_icon li {
+    float: left;
+    height: 60px;
+    display: flex;
+    flex-direction: row;
+    margin-left: 2px;
+    padding: 0;
+}
+
+
+/*--- Bootstrap Padding Fix --*/
+
+[class*="p1"] {
+    padding: 1rem;
+}
+
+
+/* footer section end ---------------------------- */
+
+
 /** end services section **/
 
 
@@ -625,9 +731,98 @@ ul.btn li:last-child {
 
 /* for tablets */
 
-@media (max-width: 768px) {}
+@media (max-width: 768px) {
+    .footer_image img {
+        z-index: 10;
+        height: 80px;
+        width: 500px;
+    }
+    .footer_inner1 {
+        margin-left: 40%;
+    }
+}
 
 
 /* for mobile screens */
 
-@media (max-width: 576px) {}
+@media (max-width: 576px) {
+    .header {
+        width: 100%;
+        height: 90vh;
+        padding: 75px 30px;
+    }
+    .white_bg {
+        background: rgb(236, 236, 236);
+        border-radius: 25px;
+        height: 80vh;
+        opacity: 0.9;
+        padding: 30px 35px;
+    }
+    .read_more {
+        display: inline;
+        justify-content: center;
+        padding: 20px 20px;
+    }
+    .login {
+        font-size: 15px;
+    }
+    .head-1 {
+        height: 40px;
+        width: 40px;
+    }
+    .text-bg {
+        text-align: center;
+    }
+    .text-bg p {
+        font-size: 16px;
+    }
+    .text-bg span {
+        font-size: 37px;
+    }
+    .text-bg h1 {
+        font-size: 50px;
+        line-height: 50px;
+    }
+    .footer_image img {
+        z-index: 10;
+        height: 50px;
+        width: 300px;
+    }
+    .footer_inner1 {
+        margin-left: 40%;
+    }
+}
+
+
+/* for extra small mobile devices */
+
+@media (max-width: 380px) {
+    .read_more {
+        display: inline;
+        justify-content: center;
+        padding: 13px 13px;
+    }
+    .login {
+        font-size: 15px;
+    }
+    .head-1 {
+        height: 35px;
+        width: 35px;
+    }
+    .text-bg {
+        text-align: center;
+    }
+    .text-bg p {
+        font-size: 15px;
+    }
+    .text-bg span {
+        font-size: 30px;
+    }
+    .text-bg h1 {
+        font-size: 38px;
+        line-height: 43px;
+    }
+    .footer_inner1 {
+        margin-left: 35%;
+    }
+}
