--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -422,6 +422,17 @@ ul.btn li:last-child {
     background-repeat: no-repeat;
 }
 
+.down-arrow a>i {
+    background-color: #17094c;
+    border-radius: 50px;
+    color: white;
+    height: 30px;
+    width: 30px;
+    font-size: 28px;
+    text-align: center;
+    margin-top: 5px;
+}
+
 .white_bg {
     background: rgb(236, 236, 236);
     border-radius: 25px;
@@ -750,6 +761,16 @@ ul.social_icon li {
         line-height: 20px;
         text-align: center;
         padding: 10px 0px;
+    }
+    .down-arrow a>i {
+        background-color: rgb(236, 236, 236);
+        border-radius: 50px;
+        color: #17094c;
+        height: 30px;
+        width: 30px;
+        font-size: 28px;
+        text-align: center;
+        margin-top: 60px;
     }
 }
 
