--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -423,14 +423,18 @@ ul.btn li:last-child {
 }
 
 .down-arrow a>i {
-    background-color: #17094c;
-    border-radius: 50px;
-    color: white;
+    /* background-color: #17094c; */
+    border-radius: 5px;
+    color: #17094c;
     height: 30px;
     width: 30px;
-    font-size: 28px;
+    font-size: 30px;
     text-align: center;
     margin-top: 5px;
+}
+
+.down-arrow a>i:hover {
+    transition-timing-function: ease-in-out;
 }
 
 .white_bg {
@@ -764,7 +768,7 @@ ul.social_icon li {
     }
     .down-arrow a>i {
         background-color: rgb(236, 236, 236);
-        border-radius: 50px;
+        border-radius: 5px;
         color: #17094c;
         height: 30px;
         width: 30px;
