--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -428,7 +428,7 @@ ul.btn li:last-child {
     font-size: 6vh;
     text-align: center;
     position: absolute;
-    bottom: 4px;
+    bottom: 0;
     left: 47%;
 }
 
